完善socpe权限